--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>My Valentine</title>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Pacifico&display=swap" rel="stylesheet">
