--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
   .valentine-cat {
     width: 65vw !important; /* Котик станет чуть меньше, чтобы не занимать весь экран */
   }
+    .final-images-container{
+      width: 65vw !important;
+    }
 }
   </style>
 </head>
