--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
   }
 
   /* Поправляем координаты, чтобы не было кучи-малы */
-  .kub-image { top: 5% !important; left: 75% !important; }
+  .kub-image { top: 5% !important; left: 70% !important; }
   .anna-image { top: 5% !important; right: 5% !important; left: auto !important; }
-  .us-image { bottom: 8% !important; top: auto !important; }
+  .us-image { top: 5% !important; bottom: auto !important;left:5% !important; }
   .final-image { top: 55% !important; }
 }
   </style>
