--- a/index.html
+++ b/index.html
@@ -146,23 +146,28 @@
     width: 65vw !important; /* Котик станет чуть меньше, чтобы не занимать весь экран */
   }
     .kub-image, .anna-image { 
-    width: 25vw !important; /* Были огромные, стали 30% ширины экрана */
+    width: 20vw !important; /* Были огромные, стали 30% ширины экрана */
     max-width: 120px;
   }
 
   /* Нижние фото (мы и объект) */
-  .us-image, .final-image { 
+  .us-image { 
     width: 30vw !important; /* Умеренный размер для центральных фото */
     max-width: 200px;
     left: 50% !important;
     transform: translateX(-50%) !important; /* Центрируем */
   }
-
+.final-image { 
+    width: 50vw !important; /* Умеренный размер для центральных фото */
+    max-width: 200px;
+    left: 50% !important;
+    transform: translateX(-50%) !important; /* Центрируем */
+  }
   /* Поправляем координаты, чтобы не было кучи-малы */
   .kub-image { top: 5% !important; right: 30% !important; left: auto !important;}
   .anna-image { top: 5% !important; right: 5% !important; left: auto !important; }
-  .us-image { top: 5% !important;left: 15% !important; }
-  .final-image { top: 55% !important; }
+  .us-image { top: 5% !important;left: 20% !important; }
+  .final-image { top: 65% !important; }
 }
   </style>
 </head>
