--- a/index.html
+++ b/index.html
@@ -145,8 +145,12 @@
   .valentine-cat {
     width: 65vw !important; /* Котик станет чуть меньше, чтобы не занимать весь экран */
   }
-    .kub-image, .anna-image { 
+    .kub-image { 
     width: 20vw !important; /* Были огромные, стали 30% ширины экрана */
+    max-width: 120px;
+  }
+    .anna-image { 
+    width: 25vw !important; /* Были огромные, стали 30% ширины экрана */
     max-width: 120px;
   }
 
