--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
       "Waking up with you is the best feeling",
       "I love watching movies with you",
       "You are the best support",
-      "You are so incredibly funny",
-      "You are so caring and attentive",
+      "You are sooooo funny 😅",
+      "You are very caring and attentive",
       "Even being silent with you is a joy",
-      "You are my best friend and my true love"
+      "I am so happy that I met you"
     ];
 
     let currentReason = 0;
